fixed: overlapping issues and make the page laod faster

--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -2,6 +2,8 @@
   margin: auto;
   padding-bottom: 100px;
   margin-top: 100px;
+  position: relative;
+  z-index: 10;
 }
 .contact-section h3 {
   font-size: 60px;
@@ -13,22 +15,24 @@
   display: flex;
   justify-content: space-between;
 }
-.contact-flex h4 {
-  font-weight: 500;
-  margin: 0;
-  opacity: 0.6;
-}
 .contact-box {
   display: flex;
   flex-direction: column;
 }
-.contact-flex p {
+.contact-box h4 {
+  font-weight: 500;
+  margin: 0;
+  opacity: 0.6;
+}
+.contact-box p {
   margin-top: 10px;
   margin-bottom: 20px;
 }
 a.contact-social {
   font-size: 25px;
   border-bottom: 1px solid #ccc;
+  display: inline-block;
+  margin-bottom: 10px;
 }
 .contact-box h2 {
   font-weight: 400;
@@ -46,47 +50,9 @@ a.contact-social {
   gap: 10px;
   opacity: 0.5;
 }
-@media only screen and (max-width: 1600px) {
-  .contact-section h3 {
-    font-size: 50px;
-  }
-  .contact-box h2 {
-    font-size: 20px;
-  }
-  a.contact-social {
-    font-size: 22px;
-  }
-}
-@media only screen and (max-width: 1300px) {
-  .contact-section h3 {
-    font-size: 40px;
-  }
-  .contact-box h2 {
-    font-size: 18px;
-  }
-  a.contact-social {
-    font-size: 20px;
-  }
-  .contact-flex p {
-    margin-top: 0px;
-  }
-}
-@media only screen and (max-width: 900px) {
-  .contact-flex {
-    flex-direction: column;
-    gap: 40px;
-  }
-  .contact-flex p {
-    margin-bottom: 0px;
-  }
-  .contact-flex h4 {
-    margin-top: 20px;
-  }
-  .contact-section {
-    margin-top: 50px;
-    padding-bottom: 50px;
-  }
-  .contact-container {
-    width: calc(100% - 25px);
-  }
+.contact-social-grid {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 10px;
 }
